horizontal scrolling fixed

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,14 @@ h1 {
 /* media queries */
 
 @media screen and (max-width: 37rem) {
+  html,
+  body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative;
+  }
+
   .hero {
     display: grid;
     grid-template-columns: 1fr;
